--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "private": true,
   "version": "0.0.1",
   "type": "module",
-  
+  "engines": {
+    "node": ">=16.0.0 <18.0.0"
+  },
   "scripts": {
     "dev": "cp env/env.dev .env && vite --mode dev",
     "clean:dist": "rimraf dist",
@@ -23,7 +25,6 @@
     "git:short": "git add . && git cz && git push",
     "git": "npm run prod && npm run git:short"
   },
-
   "dependencies": {
     "@vueuse/core": "^9.13.0",
     "@vueuse/head": "^1.1.5",
@@ -70,6 +71,7 @@
     "typescript": "^4.9.5",
     "unplugin-auto-import": "^0.15.0",
     "unplugin-icons": "^0.15.3",
+    "unplugin-imagemin": "^0.3.11",
     "unplugin-vue-components": "^0.24.0",
     "vite": "^4.1.4",
     "vite-plugin-compression": "^0.5.1",
