--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "private": true,
   "version": "0.0.1",
   "type": "module",
-
-  
   "scripts": {
     "dev": "cp env/env.dev .env && vite --mode dev",
     "clean:dist": "rimraf dist",
@@ -47,6 +45,7 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitest/coverage-c8": "^0.29.2",
     "@vitest/ui": "^0.29.2",
+    "@vue/compiler-sfc": "^3.2.47",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/test-utils": "^2.3.0",
     "autoprefixer": "^10.4.13",
